# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  example.ipynb  requirements.txt
pycounts/docs/: conf.py
src/pycounts_macqueen/: __init__.py  datasets.py  plotting.py
src/pycounts_macqueen/data/: flatland.txt
tests/: test_pycounts.py
