[tool.poetry]
name = "pycounts_macqueen"
version = "0.2.0"
description = "Calculate word counts in a text file"
authors = ["Alice MacQueen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.1", python = "^3.8"}
sphinx-autoapi = "^2.0.1"
python-semantic-release = "^7.33.2"

[tool.semantic_release]
version_variable = "pyproject.toml:version"     # version location
branch = "main"                                 # branch to make releases of
changelog_file = "CHANGELOG.md"                 # changelog file
dist_path = "dist/"                             # where to put dists
upload_to_release = true                        # auto-create GitHub release
upload_to_pypi = false                          # don't auto-upload to PyPI
remove_dist = false                             # don't remove dists
patch_without_tag = true                        # patch release by default even if there is no trigger tag like feat or fix in any commits since the last release.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
